[package]
name = "amimir"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
dotenvy = "0.15.7"
clap = { version = "4.0", features = ["derive"] }
base64-simd = "0.8.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
